--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -14,6 +14,10 @@ on:
         #      required: true
         #      default: 'patch'
 
+permissions:
+    contents: write
+
+
 jobs:
     build:
         runs-on: ubuntu-latest
@@ -49,7 +53,7 @@ jobs:
               id: create_release
               uses: actions/create-release@v1
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN release token create }}
               with:
                   tag_name: ${{ github.ref }}
                   release_name: Release ${{ github.ref }}
