--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.BeatInspector">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,5 +24,9 @@
             </intent-filter>
         </activity>
     </application>
+
+    <queries>
+        <package android:name="com.spotify.music" />
+    </queries>
 
 </manifest>
