--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -28,6 +28,7 @@ jobs:
               with:
                   java-version: 17
                   cache: 'gradle'
+                  distribution: 'zulu'
             - name: Grant execute permission for gradlew
               run: chmod +x gradlew
             - name: Create local.properties
