--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -79,3 +79,13 @@ jobs:
                  asset_path: ./app/build/outputs/apk/release/app-release.apk
                  asset_name: app-release.apk
                  asset_content_type: application/vnd.android.package-archive
+            - name: Attach deobfuscation file to Release
+              id: upload-release-asset
+              uses: actions/upload-release-asset@v1
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              with:
+                upload_url: ${{ steps.create_release.outputs.upload_url }}
+                asset_path: ./app/build/app-r8-mapping.txt
+                asset_name: app-r8-mapping.txt
+                asset_content_type: text/plain
