--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -22,13 +22,14 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v4
             - name: Set up JDK 17
-              uses: actions/setup-java@v2
+              uses: actions/setup-java@v4
               with:
                   java-version: 17
-                  cache: 'gradle'
                   distribution: 'zulu'
+            - name: Setup Gradle
+              uses: gradle/actions/setup-gradle@v3
             - name: Grant execute permission for gradlew
               run: chmod +x gradlew
             - name: Create local.properties
